fix: api-group-tree be cut when list too long

--- a/src/workbench/browser/src/app/pages/api/group/tree/api-group-tree.component.scss
+++ b/src/workbench/browser/src/app/pages/api/group/tree/api-group-tree.component.scss
@@ -49,8 +49,8 @@
   }
 }
 ::ng-deep .group_tree {
-  overflow: auto;
-  height: calc(100vh - var(--NAVBAR_HEIGHT) - 88px);
+  overflow: hidden scroll;
+  height: calc(100vh - var(--NAVBAR_HEIGHT) - var(--FOOTER_HEIGHT) - 120px);
   .ant-tree-switcher {
     // width: 12px;
     // padding-left: 4px;
